--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       run: echo "No tests defined yet" 
 
     - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@v1
+      uses: snyk/actions/node@master
       with:
         command: test
       env:
