--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,77 +1,77 @@
-name: CI/CD Pipeline
+# name: CI/CD Pipeline
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#   pull_request:
+#     branches: [ main ]
 
-jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
+# jobs:
+#   build-and-test:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout source code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Important for SonarCloud analysis
+#     steps:
+#     - name: Checkout source code
+#       uses: actions/checkout@v4
+#       with:
+#         fetch-depth: 0  # Important for SonarCloud analysis
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+#     - name: Set up Node.js
+#       uses: actions/setup-node@v3
+#       with:
+#         node-version: 18
 
-    - name: Install dependencies
-      run: npm install
+#     - name: Install dependencies
+#       run: npm install
 
-    - name: Run lint or test (optional)
-      run: echo "No tests defined yet" 
+#     - name: Run lint or test (optional)
+#       run: echo "No tests defined yet" 
 
-    - name: SonarCloud Analysis
-      uses: SonarSource/sonarqube-scan-action@v5
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#     - name: SonarCloud Analysis
+#       uses: SonarSource/sonarqube-scan-action@v5
+#       env:
+#         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    - name: Run Snyk to check for vulnerabilities
-      uses: snyk/actions/node@master
-      with:
-        command: test
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+#     - name: Run Snyk to check for vulnerabilities
+#       uses: snyk/actions/node@master
+#       with:
+#         command: test
+#       env:
+#         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
-    - name: Build Docker image
-      run: docker build -t auth-service .
+#     - name: Build Docker image
+#       run: docker build -t auth-service .
 
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+#     - name: Log in to DockerHub
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_TOKEN }}
 
-    - name: Push Docker image
-      run: |
-        docker tag auth-service ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
+#     - name: Push Docker image
+#       run: |
+#         docker tag auth-service ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
+#         docker push ${{ secrets.DOCKER_USERNAME }}/auth-service:latest
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+#     - name: Configure AWS Credentials
+#       uses: aws-actions/configure-aws-credentials@v2
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: Update ECS Task Definition
-      id: task-def
-      uses: aws-actions/amazon-ecs-render-task-definition@v1
-      with:
-        task-definition: ecs-task-def.json
-        container-name: auth-service
-        image: docker.io/${{ secrets.DOCKER_USERNAME }}/auth-service:latest
+#     - name: Update ECS Task Definition
+#       id: task-def
+#       uses: aws-actions/amazon-ecs-render-task-definition@v1
+#       with:
+#         task-definition: ecs-task-def.json
+#         container-name: auth-service
+#         image: docker.io/${{ secrets.DOCKER_USERNAME }}/auth-service:latest
 
-    - name: Deploy to ECS Fargate
-      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: user-auth-service
-        cluster: auth-microservice-cluster
-        wait-for-service-stability: true
+#     - name: Deploy to ECS Fargate
+#       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+#       with:
+#         task-definition: ${{ steps.task-def.outputs.task-definition }}
+#         service: user-auth-service
+#         cluster: auth-microservice-cluster
+#         wait-for-service-stability: true
